5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1756_1577.log
== SUBMITION (2019-05-27 15:34:19) 
-- CODE:
from math import*
a = float(input("aceleração do carro: "))
V0 = float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt
-- EXECUTION TIME:
0.154219
-- ERROR:
  File "/home/codebench/codes/1756/1577/main.py", line 10
    
            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:34:38) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
V0 = float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt
-- EXECUTION TIME:
0.185792
-- ERROR:
  File "/home/codebench/codes/1756/1577/main.py", line 10
    
            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:34:42) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
V0 = float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt
-- ERROR:
File "XXXX", line 10
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:34:50) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
V0 = float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.507889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:34:52) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
V0 = float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.595245
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:35:09) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
vo=float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:12) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
vo=float(input("velocidade inicial: "))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.617966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:51) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
vo = float(input("velocidade inicial:"))
N = int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.528463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:36:14) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
vo = float(input("velocidade inicial:"))
n= int(input("numero inteiro: "))
vetor = arrange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.275306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1577/main.py", line 5, in <module>
    vetor = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:36:30) 
-- CODE:
from numpy import*
a = float(input("aceleração do carro: "))
vo = float(input("velocidade inicial:"))
n= int(input("numero inteiro: "))
vetor = arange(n)
t = vetor[:n]
d = zeros(n)
dt = (a*t**2/2) + vo * t
print(dt)
-- EXECUTION TIME:
0.376729
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
